# navicast-cl

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.claude/: launch.json
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: dark_map.html  port_map.html  streamlit_app.py
app/data/: benchmark.csv  chile_ais.parquet  chile_sar.parquet  dark_us.parquet  eta.csv  port_h3.parquet  stats.json
config/: port_laxlb.geojson  snapshots.yml
dags/: monitor_chile_dag.py  navicast_dag.py
deploy/: navicast-recorder.service
docs/: benchmark_results.md  cv-and-interview.md  dark_ships_report.md  deploy_recorder.md  eta_model_report.md  gold_features_report.md  portfolio-plan.md  silver_cleaning_report.md  sprints.md  writeup-draft.md
scripts/: bootstrap_s3.py  build_app_data.py  build_port_polygon.py  cross_sar_ais.py  fetch_gfw_chile.py  record_aisstream.py  run_pipeline.py
src/navicast/: __init__.py  benchmark.py  clean.py  detect_dark.py  features.py  ingest.py  model_eta.py  monitor_chile.py  viz.py
src/navicast/common/: __init__.py  config.py  h3utils.py  io_s3.py  schema.py
tests/: test_config.py  test_cross.py  test_ingest.py  test_schema.py
